--- a/style.css
+++ b/style.css
@@ -3,14 +3,16 @@ body {
     grid-template-rows: 1fr auto;
     min-height: 100vh;
     font-family: 'Raleway', 'DM Sans', sans-serif;
-    background: rgb(108, 112, 116);
+    background: rgba(108, 112, 116,.5);
 }
 
 h1 {
     margin: 1em;
     text-align: center;
     color: orange;
-    text-shadow: 2px 2px 3px black;
+    font-size: 2em;
+    font-weight: 600;
+    text-shadow: 2px 2px 2px black;
 }
 
 .table{
@@ -21,6 +23,7 @@ h1 {
     table-layout: fixed;
     border: solid 3px black;   
     border-collapse: collapse; 
+    bottom: 1em;
 }
 
 thead{    
@@ -33,7 +36,7 @@ th,td{
     width: 33%;
     padding: 10px;
     font-weight: 600;
-    text-shadow: 2px 2px 3px black;    
+    text-shadow: 2px 2px 2px black;    
 }
 
 tbody{
@@ -48,7 +51,7 @@ footer {
     width: 100%;
     height: 3em;
     color: orange;
-    text-shadow: 2px 2px 3px black;
+    text-shadow: 2px 2px 2px black;
     text-align: right;
     padding-right: 2em;
     font-size: .9em;
@@ -62,5 +65,9 @@ footer {
 
     footer{
         padding-right: 5em;
+    }
+
+    h1{
+        font-size: 2.5em;
     }
 }
