--- a/style.css
+++ b/style.css
@@ -7,12 +7,13 @@ body {
 }
 
 h1 {
-    margin: 1em;
+    margin: 2em;
     text-align: center;
     color: orange;
     font-size: 2em;
     font-weight: 600;
     text-shadow: 2px 2px 2px black;
+    margin-bottom: 1em;
 }
 
 .table{
