--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
+/* font-family: 'DM Sans', sans-serif;
+font-family: 'Roboto', sans-serif; */
+
 #body {
     display: grid;
     grid-template-rows: 1fr auto;
     min-height: 100vh;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'DM Sans', sans-serif;
     background: url(./images/bguno.jpg) no-repeat fixed;
     background-size: 100% 100%;
 }
@@ -15,7 +18,7 @@ main {
 
 /* Menu-Tabla */
 .table {
-    width: 50%;
+    width: 95%;
     margin: 0 auto;
     margin-top: 1em;
     color: rgb(6, 72, 33);
@@ -28,7 +31,7 @@ thead {
     background-color: rgb(116, 170, 127);
     color: rgb(242, 242, 242);
     text-shadow: 1px 1px black;
-    font-size: 1.3em;
+    font-size: 1.2em;
     text-align: center;
     height: 2.6em;
 }
@@ -53,7 +56,8 @@ footer {
     text-align: right;
     font-size: 1.2em;
     font-weight: 800;
-    padding-right: 2em;
+    margin-top: 1em;
+    padding-right: 1em;
 }
 
 input[type='checkbox'] {
@@ -69,7 +73,7 @@ input[type='checkbox'] {
 }
 
 .label {
-    width: 50%;
+    width: 95%;
     margin: 0 auto;
     display: block;
     text-align: center;
@@ -97,7 +101,7 @@ input[type='checkbox'] {
 }
 
 .menu-content {
-    width: 50%;
+    width: 95%;
     margin: 0 auto;
     max-height: 0;
     overflow: hidden;
@@ -129,6 +133,7 @@ input[type='checkbox'] {
     padding: 2px;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 1);
+    font-size: 1.3em;
 }
 
 .modal-header,
@@ -165,9 +170,30 @@ span {
 
 .offcanvas-start h5,
 .offcanvas-end h5 {
-    font-size: 2em;
+    font-size: 1.5em;
+    margin-bottom: 0;
 }
 
 .result {
     margin: 0 auto;
+}
+
+@media screen and (min-width:760px) {
+    .table,.label,.menu-content {
+        width: 60%;
+}
+
+thead {
+    font-size: 1.3em;
+}
+}
+
+@media screen and (min-width:1000px) {
+    .table,.label,.menu-content {
+        width: 50%;
+}
+
+footer {
+    padding-right: 2em;
+}
 }
