cambios no significativos

--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ input[type='checkbox'] {
 /* Calcular */
 
 .modal-content {
-    background: url(./images/bguno-a.jpg);
+    background: url(./images/bguno-e.jpg);
     padding: 2px;
     border-radius: 8px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 1);
