--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ input[type='checkbox'] {
 
 .modal-header,
 .modal-footer {
-    color: #f2f2f2;    
+    color: #f2f2f2;
     text-shadow: 1px 1px black;
     background-color: rgb(73, 108, 76);
 }
@@ -150,7 +150,7 @@ input[type='checkbox'] {
 
 .botones {
     text-align: center;
-    background-color: rgba(222, 237, 191, 0.8);   
+    background-color: rgba(222, 237, 191, 0.8);
     border-radius: 4px;
     padding: 0 10px;
     margin: 5px;
@@ -178,21 +178,70 @@ span {
 }
 
 @media screen and (min-width:760px) {
-    .table,.label,.menu-content {
-        width: 60%;
-}
 
-thead {
-    font-size: 1.3em;
-}
+    .table,
+    .label,
+    .menu-content {
+        width: 60%;
+    }
+
+    thead {
+        font-size: 1.3em;
+    }
 }
 
 @media screen and (min-width:1000px) {
-    .table,.label,.menu-content {
+
+    .table,
+    .label,
+    .menu-content {
         width: 50%;
+    }
+
+    footer {
+        padding-right: 2em;
+    }
 }
 
-footer {
-    padding-right: 2em;
+/* SWEETALERTS */
+.info_title{
+    padding: 10px;  
+    background: url(./images/bguno-c2.jpg)
 }
+
+.info_text {
+    font-family: 'DM Sans', 'Roboto', sans-serif;
+    font-size: 1em;
+    text-align: left;
+    color: #2e513c;
+    margin-top: 1em;  
+    padding: 10px;  
+    background: url(./images/bguno-c2.jpg)
 }
+
+.mje_container {
+    width: 100%;
+}
+
+.div_mje {
+    background: url(./images/bguno-c2.jpg);
+    margin: 0 auto;
+    border-radius: 3px;
+    box-shadow: 0 6px 10px rgba(0, 0, 0, .8);
+}
+
+.mje {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 1.4em;
+    color: #2e513c;
+    padding: .5em;
+}
+
+.resultado{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 1em;
+    line-height: 1em;
+    color: #2e513c;
+    padding: 18px; 
+}
+
