--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ input[type='checkbox'] {
     display: none;
 }
 
-.btn {
+.btnMenu {
     background-color: rgba(193, 209, 162, .8);
     box-shadow: 0 2px 4px rgba(0, 0, 0, .7);
     border-radius: 5px;
@@ -127,7 +127,6 @@ input[type='checkbox'] {
 }
 
 /* Calcular */
-
 .modal-content {
     background: url(./images/bguno-e.jpg);
     padding: 2px;
@@ -156,29 +155,97 @@ input[type='checkbox'] {
     margin: 5px;
 }
 
-/* Resultados - Info */
-.offcanvas-start,
-.offcanvas-end {
-    background: url(./images/bguno-a.jpg);
-    font-size: 1.3em;
+
+/* SWEETALERTS */
+.info_title {
+    padding: 10px;
+    background: url(./images/bguno-c2.jpg)
 }
 
-span {
-    font-weight: 800;
+.info_text {
+    font-family: 'DM Sans', 'Roboto', sans-serif;
+    font-size: 1em;
+    text-align: left;
+    color: #2e513c;
+    margin-top: 1em;
+    padding: 10px;
+    background: url(./images/bguno-c2.jpg);
 }
 
-.offcanvas-start h5,
-.offcanvas-end h5 {
-    font-size: 1.5em;
-    margin-bottom: 0;
-}
-
-.result {
+.div_mje {
+    background: url(./images/bguno-c2.jpg);
     margin: 0 auto;
+    border-radius: 3px;
+    box-shadow: 0 6px 10px rgba(0, 0, 0, .8);
+}
+
+.mje {
+    font-family: 'DM Sans', 'Roboto', sans-serif;
+    font-size: 1.4em;
+    color: #2e513c;
+    padding: .5em;
+}
+
+/* MODALES */
+.div_modal {
+    background: url(./images/bguno.jpg) no-repeat;
+    background-size: 100% 100%;
+    border: none;
+    border-radius: 10px;
+}
+
+.div_modal[open] {
+    animation: show 200ms ease-in normal;
+}
+
+@keyframes show {
+    from {
+        transform: translateX(-110%);
+    }
+
+    to {
+        transform: translateX(0%);
+    }
+}
+
+.modalContent {
+    background: url(./images/bguno-c2.jpg);
+    padding: 8px;
+    font-size: 1em;
+    border-radius: 5px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, .8);
+}
+
+.modal_title {
+    text-align: center;
+    display: inline-block;
+    margin: 15px;
+    padding: 5px;
+    border-radius: 5px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, .8);
+    font-weight: 500;
+}
+
+.btnClose {
+    border: none;
+    background-color: transparent;
+    padding: 5px;
+    border-radius: 5px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, .8);
+    margin-top: 5px;
+    font-weight: 600;
+    float: right;
+}
+
+/* MEDIA QUERY */
+
+@media screen and (min-width:375px) {
+    .modalContent {        
+        font-size: 1.2em;        
+    } 
 }
 
 @media screen and (min-width:760px) {
-
     .table,
     .label,
     .menu-content {
@@ -202,46 +269,3 @@ span {
         padding-right: 2em;
     }
 }
-
-/* SWEETALERTS */
-.info_title{
-    padding: 10px;  
-    background: url(./images/bguno-c2.jpg)
-}
-
-.info_text {
-    font-family: 'DM Sans', 'Roboto', sans-serif;
-    font-size: 1em;
-    text-align: left;
-    color: #2e513c;
-    margin-top: 1em;  
-    padding: 10px;  
-    background: url(./images/bguno-c2.jpg)
-}
-
-.mje_container {
-    width: 100%;
-}
-
-.div_mje {
-    background: url(./images/bguno-c2.jpg);
-    margin: 0 auto;
-    border-radius: 3px;
-    box-shadow: 0 6px 10px rgba(0, 0, 0, .8);
-}
-
-.mje {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 1.4em;
-    color: #2e513c;
-    padding: .5em;
-}
-
-.resultado{
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 1em;
-    line-height: 1em;
-    color: #2e513c;
-    padding: 18px; 
-}
-
