--- a/style.css
+++ b/style.css
@@ -132,7 +132,8 @@ input[type='checkbox'] {
     transform: rotate(90deg) translateX(-3px);
 }
 
-/* Calcular */
+/* Modales */
+
 .modal-content {
     background: url(./images/bguno.jpg);
     color: #121b13;
@@ -159,25 +160,6 @@ input[type='checkbox'] {
     margin: 5px;
 }
 
-
-/* SWEETALERTS */
-
-.div_mje {
-    background: url(./images/bguno-c2.jpg);
-    margin: 0 auto;
-    border-radius: 3px;
-    box-shadow: 0 6px 10px rgba(0, 0, 0, .8);
-}
-
-.mje {
-    font-family: 'DM Sans', 'Roboto', sans-serif;
-    font-size: 1.4em;
-    color: #2e513c;
-    padding: .5em;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, .8);
-}
-
-/* MODALES */
 .div_modal {
     background: url(./images/bguno.jpg) no-repeat;
     background-size: 100% 100%;
@@ -233,7 +215,95 @@ input[type='checkbox'] {
     float: right;
 }
 
-/* MEDIA QUERY */
+/* SweetAlerts */
+.div_mje p {
+    background: url(./images/bguno-c2.jpg);
+    background-size: 100% 100%;
+    color: #20382a;
+    padding: 5px;
+    margin: 10px;
+    font-size: 1.1em;
+    font-weight: 600;
+    border-radius: 5px;
+    box-shadow: 0 6px 10px rgba(0, 0, 0, .8);
+}
+
+.div_mje .saludo {
+    font-size: 1.5em;
+}
+
+/* Api */
+
+.body_api {
+    margin: 0;
+    padding: 0;
+    display: grid;
+    grid-template-rows: 1fr auto;
+    min-height: 100vh;
+    font-family: 'DM Sans', sans-serif;
+    background-color: #2e513c;
+    color: rgb(6, 72, 33);
+}
+
+.api {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.bi-heart-pulse{
+    font-size: 3em;
+    color: #20382a; 
+    margin-bottom: 1em;
+    
+}
+
+.cardAlimento {
+    background: url(./images/bguno.jpg) no-repeat;
+    background-size: 100% 100%;
+    max-width: 300px;
+    margin: 1em 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 5px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, .8);
+}
+
+.card_content {
+    max-width: 95%;
+    margin: 15px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.foto {
+    max-width: 100%;
+    border-radius: 5px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, .8);
+}
+
+.card_title {
+    background-color: transparent;
+    width: 100%;
+    text-align: center;
+    border-radius: 5px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, .8);
+}
+
+.contPropiedades {
+    background: rgba(222, 237, 191, 0.8);
+    font-size: 1em;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, .8);
+
+}
+
+/* Media Query */
 
 @media screen and (min-width:375px) {
     .modalContent {
