--- a/style.css
+++ b/style.css
@@ -104,6 +104,7 @@ input[type='checkbox'] {
     margin-right: .7em;
     transform: translateY(-2px);
     transition: transform .2s ease-out;
+    
 }
 
 .menu-content {
@@ -222,86 +223,17 @@ input[type='checkbox'] {
     color: #20382a;
     padding: 5px;
     margin: 10px;
-    font-size: 1.1em;
-    font-weight: 600;
+    font-size: 1em;
+    font-weight: 500;
     border-radius: 5px;
     box-shadow: 0 6px 10px rgba(0, 0, 0, .8);
 }
 
 .div_mje .saludo {
-    font-size: 1.5em;
+    font-size: 1.3em;
+    padding: 5px;
 }
 
-/* Api */
-
-.body_api {
-    margin: 0;
-    padding: 0;
-    display: grid;
-    grid-template-rows: 1fr auto;
-    min-height: 100vh;
-    font-family: 'DM Sans', sans-serif;
-    background-color: #2e513c;
-    color: rgb(6, 72, 33);
-}
-
-.api {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-}
-
-.bi-heart-pulse{
-    font-size: 3em;
-    color: #20382a; 
-    margin-bottom: 1em;
-    
-}
-
-.cardAlimento {
-    background: url(./images/bguno.jpg) no-repeat;
-    background-size: 100% 100%;
-    max-width: 300px;
-    margin: 1em 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    border-radius: 5px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, .8);
-}
-
-.card_content {
-    max-width: 95%;
-    margin: 15px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.foto {
-    max-width: 100%;
-    border-radius: 5px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, .8);
-}
-
-.card_title {
-    background-color: transparent;
-    width: 100%;
-    text-align: center;
-    border-radius: 5px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, .8);
-}
-
-.contPropiedades {
-    background: rgba(222, 237, 191, 0.8);
-    font-size: 1em;
-    padding: 10px;
-    border-radius: 5px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, .8);
-
-}
 
 /* Media Query */
 
@@ -312,7 +244,6 @@ input[type='checkbox'] {
 }
 
 @media screen and (min-width:760px) {
-
     .table,
     .label,
     .menu-content {
@@ -327,6 +258,13 @@ input[type='checkbox'] {
         max-width: 60%;
     }
 
+    .div_mje p {
+        font-size: 1.2em;
+    }
+
+    .div_mje .saludo{
+        font-size:1.5em;
+    }
 }
 
 @media screen and (min-width:1000px) {
