--- a/style.css
+++ b/style.css
@@ -218,7 +218,7 @@ input[type='checkbox'] {
 
 /* SweetAlerts */
 .div_mje p {
-    background: url(./images/bguno-c2.jpg);
+    background: url(./images/bguno-c.jpg);
     background-size: 100% 100%;
     color: #20382a;
     padding: 5px;
